# osiris_ws

./: Pipfile  Procfile  README.md  app.json  pyproject.toml  runserver.py
src/: client_buser_ws.py  client_ws.py  hello.py  server_buser_ws.py  server_ws.py
src/osiris_ws/: server_ws.py
