[project]
name = "osiris-ws"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
dependencies = [
    "build>=1.2.2.post1",
    "keyboard>=0.13.5",
    "websockets>=13.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/limberger/osiris_ws"
Issues = "https://github.com/limberger/osiris_ws/issues"

#[project.scripts]
#spam-cli = "spam:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
